...
      />
      <Tabs.Screen
        name="chats"
        options={{
          title: t`Czaty`,
          tabBarIcon: ({ color }) => <IconChat size={20} color={color} />,
          tabBarAccessibilityLabel: "tab-chats",
          tabBarBadge: chatsTabBadge > 0 ? chatsTabBadge : undefined,
          tabBarBadgeStyle: {
            backgroundColor: colors.accent,
            fontFamily: fonts.sansSemiBold,
            fontSize: 10,
            minWidth: 18,
...
